Change homepage link in the package.json and second test of React Router with Github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alfa9317.github.io/The-Clicky-Game",
+  "homepage": "https://alfa9317.github.io/the-clicky-game",
   "name": "the-clicky-game",
   "version": "0.1.0",
   "private": true,
